No longer need preceding forward slash

--- a/dropdown.html
+++ b/dropdown.html
@@ -22,35 +22,31 @@
             mobile app means, in future, courses can be made for one and work for both. 
             Also, I suspect they may anticipate that some people could be put off/otherwise hindered
             by the 'entry requirement' of having to download the target language keyboard)
-            <br><br>Here I have a simple demo of a possible solution to the latter issue [<a href="https://github.com/Fox-Islam/dropdown-selector">Github link</a>].
-            <br><br>While I've opted, in this case, to use a forward slash, /, to 'enable' the selector 
-            for each character, to modify this such that a preceding character is unnecessary would be 
-            a simple exercise</p>
+            <br><br>Here I have a simple demo of a possible solution to the latter issue [<a href="https://github.com/Fox-Islam/dropdown-selector">Github link</a>].</p>
         </div>
         <div class="use">
             <h2>How to use this thing</h2>
-            <p>In this example, type the forward slash character, '/' followed by the pronunciation of 
-            a Japanese character (for example, 'tsu') into the input field and can select from a list 
-            of matching Japanese characters (for 'tsu' the options would be ツ, ッ, つ, っ) by using 
-            the up/down arrow keys, pressing enter once you find what you're looking for.
-            <br>To access つ one may type '/tsu' or just '/ts' followed by two presses of the 
-            down arrow key or even '/t' followed by six presses of the down arrow key and then press enter.
+            <p>Type the pronunciation of a Japanese character (for example, 'tsu') into the input 
+            field and can select from a list of matching Japanese characters (for 'tsu' the 
+            options would be ツ, ッ, つ, っ) by using the up/down arrow keys, pressing enter once you find what you're looking for.
+            <br>To access つ one may type '/tsu' or just 'ts' followed by two presses of the 
+            down arrow key or even 't' followed by six presses of the down arrow key and then press enter.
             </p>
             <div class="dropdown">
-                <input id="searchTxt" placeholder="Start each new character with /, use up and down arrows to navigate and press enter to select">
+                <input id="searchTxt" placeholder="Use up and down arrows to navigate and press enter to select">
                 <div class="dropdown-content">
                     
                 </div>
             </div>
             <div>
-                <p>With the exception of ッ, っ, and ー (which, here, are accessed with '/tsu','/tsu' and '/-' respectively)
+                <p>With the exception of ッ, っ, and ー (which, here, are accessed with 'tsu','tsu' and '-' respectively)
                 all the pronunciation pairs can be found on my <a href="tooltips.html">character tooltips page</a>. </p>
                 <p> Additionally there are a variety of available punctuation characters: </p>
                 <div class="beforeTable"><p></p></div>
                 <table>
                     <tr>
                         <th>Character</th>
-                        <th>Type '/' and </th>
+                        <th>Type</th>
                     </tr>
                     <tr>
                         <td>、</td>
