--- a/dropdown.html
+++ b/dropdown.html
@@ -29,7 +29,7 @@
             <p>Type the pronunciation of a Japanese character (for example, 'tsu') into the input 
             field and can select from a list of matching Japanese characters (for 'tsu' the 
             options would be ツ, ッ, つ, っ) by using the up/down arrow keys, pressing enter once you find what you're looking for.
-            <br>To access つ one may type '/tsu' or just 'ts' followed by two presses of the 
+            <br>To access つ one may type 'tsu' or just 'ts' followed by two presses of the 
             down arrow key or even 't' followed by six presses of the down arrow key and then press enter.
             </p>
             <div class="dropdown">
